--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,7 +1,24 @@
-.App {
-  text-align: center;
+
+ .App {
+  background-color: #FF7400;
+  font-size: 1.1rem;
+  height: 100%;
 }
 
+/* reset of defaults */
+
+html, body{ height: 100%}
+button{
+
+  border-width:0;
+}
+
+input{
+  border-width:0;
+}
+
+
+/*
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
@@ -30,4 +47,8 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
+@import './Header.css';
+@import './Home.css';
+@import './Log-in.css';
+@import './Footer.css';
