--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,8 +1,8 @@
 
  .App {
   background-color: #FF7400;
-  font-size: 1.1rem;
-  height: 100%;
+  font-size: 1.3rem;
+  
 }
 
 /* reset of defaults */
@@ -52,3 +52,5 @@ input{
 @import './Home.css';
 @import './Log-in.css';
 @import './Footer.css';
+@import './Registration.css';
+@import './Lost.css';
