--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -2,5 +2,6 @@ footer {
     height: 50px;
     text-align: center;
     padding: 20px;
-    background-color: #1FC0C0;
+    background-color: rgb(239, 235, 0);
+    color: #587E0C;
 }
