--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -2,30 +2,99 @@
     display: flex;
     flex-direction: column;
     text-align: center;
-    height:calc(100vh - 130px);
-    width: 75%;
+    width: 70%;
     margin: auto;
+    align-items: center;
     justify-content: center;
+    margin-top:50px;
 }
-
+.decor-border{
+    border: 10px dashed #E0248F;
+}
 .home h1{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 2.5rem;
+    margin-bottom: 60px;
+    font-size: 2.7rem;
+    text-transform: uppercase;
+    color: white;
 }
 
+.main-btns-holder{
+    margin: 20px 0 40px;
+    height: 200px;
+    width: 500px;
+    position: relative;
+}
 
 .main-btns-holder button{
-    width: 150px;
-    height: 100px;
+    padding: 0 !important;
+}
+.main-btns-holder button a{
+    width: 175px;
+    height: 125px;
     padding: 10px;
-    font-size: 1.1rem;
-    background-color: #9FEF00 ;
-    margin: 10px ;
-    color: #001111;
-    font-weight: 700px !important;
+    background-color: #1FC0C0 ;
+    margin-left: 30px ;
+    font-size: 1.8rem;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: 700 !important;
+    color: bisque;
+    line-height: 60px;
+}
+    /* 3d effect */
+
+#btn-lost a{
+    position:absolute;
+    transition: all .3s;
+    left:0;
 }
 
-.main-btns-holder button:focus{
+#btn-found a{
+    position:absolute;
+    transition: all .3s;
+}
+
+
+.main-btns-holder button a::before{
+    position: absolute;
+	content: '';
+    transition: all .3s;
+    bottom: -15px;
+	height: 15px;
+	width: 100%;
+	left: 8px;
+	transform: skewX(45deg);
+	background-color: #009C9C;
+}
+
+.main-btns-holder button a::after{
+    position: absolute;
+	content: '';
+    transition: all .3s;
+    right: -15px;
+	height: 100%;
+	width: 15px;
+	bottom: -8px;
+	transform: skewY(45deg);
+	background-color: #085151;
+}
+#btn-lost a:active, #btn-found a:active{
+    margin-left: 40px;
+	margin-top: 20px;
+}
+#btn-lost a:active::before, #btn-found a:active::before{
+    bottom: -5px;
+	height: 5px;
+	left: 3px;
+}
+#btn-lost a:active::after, #btn-found a:active::after{
+    right: -5px;
+	width: 5px;
+	bottom: -3px;
+}
+
+.main-btns-holder button a:focus{
     outline: none;
 }
 
