look of bases of dogs

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -22,5 +22,5 @@ input{
 @import './Log-in.css';
 @import './Footer.css';
 @import './Registration.css';
-@import './Lost.css';
-@import './Lost-dogs-page.css';
+@import './Dogs-page.css';
+@import './What-to-do-info.css';
