--- a/src/css/What-to-do-info.css
+++ b/src/css/What-to-do-info.css
@@ -9,15 +9,17 @@
     padding: 50px;
     margin: 100px 0;
     position: relative;
+    background-color: wheat;
 }
 
 .first-step h1{
     text-transform: uppercase;
-    color: white;
-    background-color: #FF7400;
+    color: #e1528f;
+    background-color: wheat;
     position: absolute;
-    padding: 0 20px;
-    top:-57px;
+    padding: 6px 20px;
+    top:-66px;
+    border-radius:16px;
     /* individual set */
     left: 394px;
 }
@@ -32,23 +34,25 @@
     padding-bottom: 160px;
     margin-bottom: 100px;
     position: relative;
+    background-color: wheat;
 }
 
 .check-base-info h1{
     text-transform: uppercase;
-    color: white;
-    background-color: #FF7400;
+    color: #e1528f;
+    background-color: wheat;
     position: absolute;
-    top:-57px;
-    padding: 0 16px;
-    left:383px;
+    top:-66px;
+    padding: 6px 17px;
+    left:382px;
+    border-radius:16px;
 }
 
-#look-in-base {
+.pop-btn {
     padding:0 !important;
 }
 
-#look-in-base a {
+.pop-btn a {
 
     width: 210px;
     height: 78px;
@@ -68,7 +72,7 @@
     
 }
 
-#look-in-base a::before{
+.pop-btn a::before{
     position: absolute;
 	content: '';
     transition: all .3s;
@@ -79,7 +83,7 @@
 	transform: skewX(45deg);
 	background-color: #009C9C;
 }
-#look-in-base a::after{
+.pop-btn a::after{
     position: absolute;
 	content: '';
     transition: all .3s;
@@ -90,20 +94,20 @@
 	transform: skewY(45deg);
 	background-color: #085151;
 }
-#look-in-base a:active{
+.pop-btn a:active{
     margin-left: 20px;
 	margin-top: 10px;
 }
-#look-in-base a:active::before{
+.pop-btn a:active::before{
     bottom: -5px;
 	height: 5px;
 	left: 3px;
 }
-#look-in-base a:active::after{
+.pop-btn a:active::after{
     right: -5px;
 	width: 5px;
 	bottom: -3px;
 }
-#look-in-base a:focus{
+.pop-btn a:focus{
     outline: none;
 }
