--- a/src/css/Add-pet.css
+++ b/src/css/Add-pet.css
@@ -2,7 +2,6 @@
     width: 75%;
     margin: auto;    
 }
-
 .add-pet h1{
     color: white;
     text-align: center;
@@ -10,12 +9,11 @@
 .add-pet form{
     display: flex;
     flex-wrap: wrap;
-    /* flex-direction: column; */
     background-color: wheat;
     border: 10px dashed #cf4675;
     padding: 30px;
+    justify-content: center;
 }
-
 .add-photo-holder{
     width:35%;
     text-align: center;
@@ -25,26 +23,25 @@
 }
 .info-holder{
     flex-grow:1;
-    
+ 
 }
 .add-place-and-time{
     height: 10%;
 }
 
 .contact-holder{
-    width: 90%;
-}
-
-
-
-.add-pet input, .add-pet label, .add-pet div{
-    margin-top: 10px;
+    width: 65%;
+    align-self: flex-end;
+    margin: 20px 0 0 auto;
 }
 
 .add-pet input{
     font-size: 1.3rem;
     margin-bottom: 15px;
+    margin-left:5px;
+    padding-left:5px;
 }
+
 
 
 
@@ -68,7 +65,84 @@ label[for='add-photo']{
 .add-place-and-time{
     height: 100px;
 }
-
-.basic-info label, .basic-info input{
-    display: inline-block;
+.basic-info{
+    margin-top:0 !important;
 }
+
+.basic-info label{
+    margin-top:15px;
+    display: block;
+
+}
+
+.basic-info > label:nth-child(5){
+    display: flex;
+    flex-direction: column;
+}
+.basic-info > label:nth-child(5) > textarea{
+    resize: none;
+    margin-top:10px;
+}
+
+input[type='submit']{
+    background-color: #1FC0C0 ;
+    cursor: pointer;
+    padding: 10px;
+    /* shining effect */
+    position: relative;
+    box-shadow: 0 0 0 0 transparent;
+    transition: all 0.2s ease-in;
+}
+
+
+
+input[type='submit']:active{
+    box-shadow: 0 0 0 0 transparent;
+    transition: box-shadow 0.2s ease-in;
+}
+
+input[type='submit']:hover{
+    color: white;
+    box-shadow: 0 0 30px 0 transparentize(#1FC0C0, 0.5);
+    background-color: #1FC0C0;
+    transition: all 0.2s ease-out;
+}
+
+
+
+@keyframes shine {
+    from {
+      opacity: 0;
+      left: 0%;
+    }
+    50% {
+      opacity: 1;
+    }
+    to {
+      opacity: 0;
+      left: 100%;
+    }
+  }
+
+
+  /*SMALL SCREEN*/
+@media(max-width:1230px){
+  .info-holder{
+    text-align: center;
+  }
+}
+
+  @media (max-width: 885px){
+    .add-pet {
+        width: 90%;
+    }
+
+    .add-pet form{
+        padding:15px;
+        justify-content: center;
+    }
+    .add-photo-holder{
+        width: 100%;
+    }
+
+  }
