--- a/src/css/Log-in.css
+++ b/src/css/Log-in.css
@@ -34,6 +34,7 @@
     font-size: 1.1rem;
     background-color: #1FC0C0 ;
     cursor: pointer;
+    margin:0 auto;
     /* shining effect */
     position: relative;
     box-shadow: 0 0 0 0 transparent;
@@ -106,12 +107,13 @@
 @media(max-width: 575px){
 
 .log-in input{
-    width: 200px;
+    width: 240px;
 }
 #log-in-btn{
-    width: 220px;
+    width: 260px;
 }
 .log-in h1{
     text-align: center;
+    font-size: 1.9em;
 }
 }
