--- a/src/css/Add-pet.css
+++ b/src/css/Add-pet.css
@@ -66,7 +66,7 @@ label[for='add-photo']{
     height: 100px;
 }
 .basic-info{
-    margin-top:0 !important;
+    margin-top:200px !important;
 }
 
 .basic-info label{
@@ -108,7 +108,21 @@ input[type='submit']:hover{
     transition: all 0.2s ease-out;
 }
 
+#map{
+    height: 190px;
+}
 
+#map button{
+    width: 35px;
+    height: 35px;
+    margin-bottom: 20px;
+    pointer-events: auto;
+    cursor: pointer;
+    background-image: url('../images/target.png');
+    background-position: center;
+    background-size: contain;
+    background-color: transparent;
+}
 
 @keyframes shine {
     from {
