--- a/src/css/Lost-Found-dog.css
+++ b/src/css/Lost-Found-dog.css
@@ -5,16 +5,29 @@
     margin-top: 40px;
     width: 75%;
     justify-content: center;
+    flex-direction: column;
+    align-items:center;
 }
 
-ul {
+.show-pet ul {
     list-style: none;
+    width: 75%;
+    position: relative;
+}
+
+#pet-map{
+    margin-bottom: 20px;
 }
 
 li.pet-photo{
-    width: 50px;
-    height: 100px;
+    width: 50%;
+    height: 300px;
     background-position: center;
     background-size: cover;
 
 }
+
+ div.show-pet ul button a {
+    bottom: 40px;
+    left:auto;
+ }
