--- a/src/css/Dogs-page.css
+++ b/src/css/Dogs-page.css
@@ -48,6 +48,20 @@
     
 }
 
+#filterForm{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#filterForm label{
+    margin: 10px 0;
+}
+
+#filterForm input{
+    margin:5px;
+}
+
 @media(min-width:1350px){
     #add-pet a{
         right: 0;
