correct registration part1

--- a/src/css/Registration.css
+++ b/src/css/Registration.css
@@ -71,7 +71,7 @@
     transition: all 0.2s ease-out;
 }
 
-#sign-up-btn::before{
+#sign-up-btn:hover::before{
     animation: shine 0.5s 0s linear;
 }
 
